data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1660.wast
;; 1. **Test Case 1:** Construct a `br_table` instruction with an index that exceeds the number of provided labels, inserting an `unreachable` instruction before the `br_table` to ensure the trap behavior is correctly handled without further execution. \    _Constraint Checked: Proper trap implementation and handling of out-of-bound index._

(assert_invalid
  (module (func $br_table-unreachable
    (block
      (unreachable)
      (br_table 0 1 2 (i32.const 3))
    )
  ))
  "type mismatch"
)